# Rebuilt2026

./: .coderabbit.yaml  .gitignore  ARCHITECTURE.md  CLAUDE.md  ISSUES_README.md  ISSUE_PREVIEW.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SUMMARY.md  TESTING_CHECKLIST.md  TEST_ISSUE.md  build.gradle  create_issues.sh  issues_manifest.json  simgui-ds.json
tools/wpilib-agent-tools/agent/: .gitignore  README.md  pyproject.toml
tools/wpilib-agent-tools/agent/scripts/: cleanup_instances.sh  sandbox_lifecycle.sh
tools/wpilib-agent-tools/agent/src/wpilib_agent_tools/: __init__.py  __main__.py  cli.py
tools/wpilib-agent-tools/agent/src/wpilib_agent_tools/commands/: __init__.py  graph.py  harness.py  keys.py  logs.py  math.py  query.py  record.py  rules.py  sandbox.py  sim.py  view.py
tools/wpilib-agent-tools/agent/src/wpilib_agent_tools/integrations/: __init__.py
tools/wpilib-agent-tools/agent/src/wpilib_agent_tools/lib/: __init__.py  analysis.py  assertions.py  log_reader.py  math_solver.py  nt_recorder.py  output.py  sandbox_manager.py  (+2 more)
tools/wpilib-agent-tools/agent/tests/: test_assertions.py  test_cli_output_policy.py  test_graph_non_numeric.py  test_harness_install.py  test_log_reader_raw_schema.py  test_log_reader_struct_decode.py  test_math_command.py  test_nt_recorder.py  test_output_bounds.py  test_query_ds_keys.py  test_query_json_output.py  test_query_math_modes.py  test_rules_install.py  test_sandbox_manager_runtime.py  test_sim_log_integration.py  test_validate_robot_repo_profile.py  test_validate_skill_script.py  test_wpilog_struct_decoder.py
(+471 files in other folders)
